calamares-settings-ubuntu (4) UNRELEASED; urgency=medium

  * Don't fail to install the system on BIOS systems (LP: #1780875).
  * Remove the right live task (LP: #1780585).
  * Enable GeoIP support by default, to get accurate timezone readings.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 09 Jul 2018 17:51:16 -0500

calamares-settings-ubuntu (3) cosmic; urgency=medium

  * Bump Standards-version to 4.1.4, no changes needed.
  * Fix Vcs-* and Homepage to reflect the move off of GitHub.
  * Allow Lubuntu to be installed on systems with no network and UEFI
    systems.
  * Add a desktop file to install the system with (LP: #1771460).
  * Update the support link to be current.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 03 Jul 2018 17:03:00 -0500

calamares-settings-ubuntu (2) cosmic; urgency=medium

  * Add a .gitignore file for debian/files.
  * Remove lubuntu-qt-desktop from Suggests.
  * Update the Lubuntu.me website for HTTPS.
  * Bump Lubuntu's system requirements to safe values.
  * Remove calamares from the explicit removal list; we don't need it to
    be there anymore.
  * Lubuntu Next -> Lubuntu.
  * Make squashfs-tools a hard dependency; without it, Lubuntu's installation
    fails (LP: #1769781).

 -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 10 May 2018 19:18:01 -0500

calamares-settings-ubuntu (1) bionic; urgency=medium

  * Initial release.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 15 Feb 2018 19:54:24 -0600