@@ -3,6 +3,7 @@ calamares-settings-ubuntu (4) UNRELEASED; urgency=medium
   * Don't fail to install the system on BIOS systems (LP: #1780875).
   * Remove the right live task (LP: #1780585).
   * Enable GeoIP support by default, to get accurate timezone readings.
+  * Make image and text IDs unique in the slideshow.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 09 Jul 2018 17:51:16 -0500
 
